--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,6 @@ main {
   padding-right: 20px;
 }
 
-/* TODO taka ætti padding af main þegar komið er fyrir ofan hámarksbreidd */
-
 h1 {
   text-align: center;
   margin: 20px 0;
@@ -40,8 +38,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* grid fyrir efni, setja þarf upp í html */
-
 .grid__row {
   display: flex;
   flex-direction: column;
@@ -55,23 +51,162 @@ h1 {
   padding-left: 10px;
 }
 
-/* TODO setja upp grid fyrir >= 1000px */
-
-/* TODO koma mynd fyrir á öðrum stað í < 1000px */
-
-/* grid fyrir cards */
-
 .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  background: #eee;
 }
 
-/* TODO útfæra grid fyrir cards */
+.card {
+  display: flex;
+  flex-direction: column;
 
-/*
-  .card kemur óbreytt úr sýnilausn á verkefni 5 fyrir utan responsive stíla og
-  að það fær `height: 100%;`
-  Sýnilausn verður gefin út við lok dags miðvikudaginn 3. okt
-*/
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 470px;
+  max-height: 300px;
+  overflow: hidden;
 
-/* TODO .card stílar úr v5 (eða sýnilausn...) */
+  background-color: #fff;
+  border: 2px solid #aaa;
+  border-radius: 5px;
 
-/* TODO responsive stílar fyrir .card */
+  height:100%;
+}
+
+.card__title {
+  margin-bottom: 20px;
+
+  font-size: 1.375em;
+  line-height: 1;
+  word-break: break-word;
+}
+
+.card__content {
+  display: flex;
+  flex: 1;
+}
+
+.card__text {
+  font-size: 1em;
+  line-height: 1.375;
+  overflow: auto;
+  word-break: break-word;
+}
+
+.card__image {
+  padding-left: 20px;
+  flex: 0 0 150px;
+}
+
+.card__img {
+  max-width: 100%;
+}
+
+.card__tags {
+  margin-top: 10px;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  list-style: none;
+}
+
+.card__tag {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.cards__col{
+  width:100%;
+  padding-left:10px;
+  padding-right:10px;
+}
+
+
+@media(max-width:699px){
+.grid__col{
+    width: 100%;
+  }
+  
+.card{
+  max-width:none;
+  max-height:none;
+  border-radius: 0;
+  border:0;
+  border-bottom:2px solid #aaa;
+}
+
+.card__content{
+  flex-direction:column;
+}
+
+.cards__col{
+  width:100%;
+}
+
+.card__image{
+padding-left:0;
+}
+
+.card__text{
+  margin-bottom:20px;
+}
+
+.grid__row:nth-child(2) .grid__col:nth-child(1) {
+  order:1;
+}
+}
+
+@media (min-width:700px){
+  .cards__row{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
+  }
+
+  .cards__col{    
+    width:50%;
+   margin-bottom: 40px;
+  }
+
+  .grid__row:nth-child(2) .grid__col:nth-child(1) {
+    order:1;
+  }
+}
+
+@media (min-width:1000px){
+  .grid__row{
+    flex-direction:row;
+  }
+
+  .grid__col{
+    width:50%;
+    margin-bottom:40px;
+  }
+
+  .cards__col{
+    width:33.333%;
+  }
+
+  .cards__row{
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
+  }
+
+  .grid__row:nth-child(2) .grid__col:nth-child(1) {
+    order:-1;
+  }
+}  
+
+  @media(min-width:1490px){
+    .main{
+      padding:0;
+    }
+  }
+   
